Clean up for scrolling bug on mobile.  Still needs some work, but this will help.  Add aria attributes for scrollers.

--- a/css/common.css
+++ b/css/common.css
@@ -568,7 +568,6 @@ section a {
 	display: block;
 	margin: 0 auto;
 	text-align: center;
-	-webkit-user-select: none;
 	-webkit-touch-callout: none;
 	width: 1em;
 }
